fix paginator and move to the right

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -17327,3 +17327,7 @@ html:not([dir=rtl]) .cz-range-slider-ui.noUi-horizontal .noUi-handle {
 .select-shipping{
     width: 250px;
 }
+
+.paginator-right {
+  justify-content: end !important;
+}
