--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -17331,3 +17331,10 @@ html:not([dir=rtl]) .cz-range-slider-ui.noUi-horizontal .noUi-handle {
 .paginator-right {
   justify-content: end !important;
 }
+
+.loader {
+  position: fixed;
+  top: 88%;
+  left: 46%;
+  z-index: 1000;
+}
