--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -6,6 +6,9 @@
 .bg-light-blue{
     background: #2bb5fe !important;
 }
+.bg-purple{
+    background: #994ae3 !important;
+}
 .b-bottom-2{
     border-bottom: 2px solid #fff;
 }
