--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,9 @@
 .max-h-17{
     max-height: 17em !important;
 }
+.max-height-14 {
+    max-height: 14em;
+}
+.min-height-14 {
+    min-height: 14em;
+}
