--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -40,13 +40,13 @@
     height: 100%;
 }
 
-/* .overflow-scroll-y{
+.overflow-scroll-y{
     height: auto;
     width: 200px;
     border: 1px solid #ddd;
     background: #f1f1f1;
     overflow-y: scroll;    
-} */
+}
 
 @media (min-width: 1000px) {
     .dropdown-with-columns {
