--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -8,3 +8,10 @@
     border-radius: 3em !important;
 }
 
+.field-icon {
+    float: right;
+    padding-right: 15px;
+    margin-top: -25px;
+    position: relative;
+    z-index: 2;
+}
