--- a/public/packages/backpack/base/css/bundle.css
+++ b/public/packages/backpack/base/css/bundle.css
@@ -52,3 +52,16 @@
     text-decoration: none;
     color: grey;
 }
+.custom-badge{
+    position: absolute;
+    top: -0.3125rem;
+    right: 1.6875rem;
+    width: 1.25rem;
+    height: 1.25rem;
+    border-radius: 50%;
+    background-color: #467fd0;
+    color: #fff;
+    font-size: 0.75rem;
+    text-align: center;
+    line-height: 1.25rem;
+}
