Update customer view

--- a/public/packages/backpack/base/css/bundle.css
+++ b/public/packages/backpack/base/css/bundle.css
@@ -77,3 +77,16 @@
     -webkit-transition: 0.3s ease;
     transition: 0.3s ease;
 }
+
+
+.menu-content{
+    position: absolute;
+    top:0;
+    left:0;
+    right: 0;
+    bottom: 0;
+    z-index:9999;
+
+    -webkit-transition: 0.3s ease;
+    transition: 0.3s ease;
+}
