Add confirm to payment

--- a/public/packages/backpack/base/css/bundle.css
+++ b/public/packages/backpack/base/css/bundle.css
@@ -92,6 +92,12 @@
 }
 .product-name{
     display: -webkit-box;
+    -webkit-line-clamp: 3; /* number of lines to show */
+    -webkit-box-orient: vertical;
+}
+.product-name-mobile{
+    display: -webkit-box;
     -webkit-line-clamp: 2; /* number of lines to show */
     -webkit-box-orient: vertical;
 }
+
