change covipa frontend

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,9 +1,16 @@
 .max-height-14 {
     max-height: 14em;
 }
+
 .min-height-14 {
     min-height: 14em;
 }
+
 .border-radious-3{
     border-radius: 3em !important;
+}
+
+.badge-yellow {
+    background-color: #FDCA00;
+    color: black;
 }
